; ModuleID = '/home/carl/AnghaBench/timescaledb/tsl/src/compression/extr_compress_utils.c_tsl_compress_chunk_wrapper.c'
source_filename = "/home/carl/AnghaBench/timescaledb/tsl/src/compression/extr_compress_utils.c_tsl_compress_chunk_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@INVALID_CHUNK_ID = common dso_local global i64 0, align 8
@NOTICE = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_DUPLICATE_OBJECT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"chunk \22%s\22 is already compressed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsl_compress_chunk_wrapper(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.TYPE_5__* @ts_chunk_get_by_relid(i32 %7, i32 0, i32 1)
  store %struct.TYPE_5__* %8, %struct.TYPE_5__** %6, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @INVALID_CHUNK_ID, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %30

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %15
  %19 = load i32, i32* @NOTICE, align 4
  br label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @ERROR, align 4
  br label %22

22:                                               ; preds = %20, %18
  %23 = phi i32 [ %19, %18 ], [ %21, %20 ]
  %24 = load i32, i32* @ERRCODE_DUPLICATE_OBJECT, align 4
  %25 = call i32 @errcode(i32 %24)
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @get_rel_name(i32 %26)
  %28 = call i32 @errmsg(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %27)
  %29 = call i32 @ereport(i32 %23, i32 %28)
  store i32 0, i32* %3, align 4
  br label %36

30:                                               ; preds = %2
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* %4, align 4
  %35 = call i32 @compress_chunk_impl(i32 %33, i32 %34)
  store i32 1, i32* %3, align 4
  br label %36

36:                                               ; preds = %30, %22
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local %struct.TYPE_5__* @ts_chunk_get_by_relid(i32, i32, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @get_rel_name(i32) #1

declare dso_local i32 @compress_chunk_impl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
